fix(server): 修复生产环境 CORS 被拒及安全配置不加载的问题
SecurityConfig 移除 @Profile("!prod") 注解，修复生产环境下
安全配置完全失效的问题；allowedOriginPatterns 改为从配置读取，
支持通过 PULLCAT_CORS_ALLOWED_ORIGINS 环境变量指定生产域名；
OAuth2 登录成功跳转 URL 同步使用 pullcat.base-url 配置。